--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-paginate": "^8.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
+    "react-scroll": "^1.8.9",
     "sass": "^1.62.1"
   },
   "devDependencies": {
